--- a/login.html
+++ b/login.html
@@ -1,7 +1,112 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>eMercado - Todo lo que busques está aquí</title>
+    <link rel="stylesheet" href="css/bootstraplogin.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
+    <!-- <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js
+  "
+    /> -->
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js
+  "
+    /> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css
+  "
+    />
+    <script src="js/login.js"></script>
+  </head>
 
-<head>
+  <body>
+    <div class="login_form_wrapper">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2">
+            <!-- login_wrapper -->
+            <div class="login_wrapper">
+              <div class="row">
+                <!-- <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6">
+                  <a href="#" class="btn btn-primary facebook">
+                    <span>Login with Facebook</span>
+                    <i class="fa fa-facebook"></i>
+                  </a>
+                </div> -->
+                <!-- <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6">
+                  <a href="#" class="btn btn-primary google-plus">
+                    Login with Google <i class="fa fa-google-plus"></i>
+                  </a>
+                </div> -->
+              </div>
+              <h2>Inicie sesión</h2>
+              <div class="formsix-pos">
+                <div class="form-group i-email">
+                  <input
+                    type="email"
+                    class="form-control"
+                    required=""
+                    id="email2"
+                    placeholder="Email *"
+                  />
+                </div>
+              </div>
+              <div class="formsix-e">
+                <div class="form-group i-password">
+                  <input
+                    type="password"
+                    class="form-control"
+                    required=""
+                    id="password2"
+                    placeholder="Contraseña *"
+                  />
+                </div>
+              </div>
+              <!-- <div class="login_remember_box">
+                <label class="control control--checkbox"
+                  >Remember me
+                  <input type="checkbox" />
+                  <span class="control__indicator"></span>
+                </label> -->
+                <!-- <a href="#" class="forget_password"> Forgot Password </a>
+              </div> -->
+              <div class="login_btn_wrapper">
+								<a href="#" class="btn btn-primary login_btn" id="login"> Login </a>
+							</div>
+              <!-- <div class="login_message">
+                <p>Don&rsquo;t have an account ? <a href="#"> Sign up </a></p>
+              </div> -->
+            </div>
+            <!-- /.login_wrapper-->
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- <div class="container">
+      <p class="float-end">
+        <a href="#">Volver arriba</a>
+      </p>
+      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a> -
+        2022</p>
+      <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
+    </div> -->
+    
+  </body>
+</html>
+
+<!-- <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>eMercado - Todo lo que busques está aquí</title>
@@ -37,4 +142,4 @@
   <script src="js/login.js"></script>
 </body>
 
-</html>
+</html> -->
