--- a/products.html
+++ b/products.html
@@ -36,14 +36,27 @@
       </div>
     </div>
   </nav>
-  <main class="pb-5 container">
+  
+<main role="main" class="pb-5">
+    <div class="text-center p-4">
+        <h2>Autos</h2>
+    </div>
     <div class="container">
+        <div class="row">
+            <div class="list-group" id="cat-list-container">
+
+            </div>
+        </div>
+    </div>
+</main>
+  <!-- <main class="pb-5 container">
+      <div class="container">
       <div class="alert alert-danger text-center" role="alert">
         <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
       </div>
-    </div>
-  </main>
-  <footer class="text-muted">
+    </div> -->
+  <!-- </main> -->
+  <!-- <footer class="text-muted">
     <div class="container">
       <p class="float-end">
         <a href="#">Volver arriba</a>
@@ -52,7 +65,7 @@
         2022</p>
       <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
-  </footer>
+  </footer> -->
   <div id="spinner-wrapper">
     <div class="lds-ring">
       <div></div>
