--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <a class="nav-link"  id="cierresesion">Cerrar sesión</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link"  id="nombreusuario"></a>
+          </li>
+          <li class="nav-item">
           </li>
         </ul>
       </div>
