--- a/categories.html
+++ b/categories.html
@@ -34,6 +34,9 @@
             <a class="nav-link" href="index.html" id="cierresesion">Cerrar sesión</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link"  id="nombreusuario"></a>
+          </li>
+          <li class="nav-item">
           </li>
         </ul>
       </div>
