--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
                     class="form-control"
                     required=""
                     id="email2"
-                    placeholder="Email *"
+                    placeholder="Usuario *"
                   />
                 </div>
               </div>
