Productos relacionados y boton (name de usuario)

--- a/product-info.html
+++ b/product-info.html
@@ -34,10 +34,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html" id="cierresesion">Cerrar sesión</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"  id="nombreusuario"></a>
+            <a class="nav-link"  id="barra"></a>
           </li>
           <li class="nav-item">
           </li>
@@ -93,6 +90,15 @@
         </div>
       </div>
     </section>
+
+    <hr>
+  <div>
+    <h4>Productos relacionados</h4>
+  </div>
+  <div id="productosRelacionados">
+
+  </div>
+    
 
     <!-- https://mdbootstrap.com/docs/standard/extended/comments/ Link para la caja de comentarios. Buscar "Simple comment" -->
 
