--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link"  id="cierresesion">Cerrar sesión</a>
+            <a class="nav-link"  id="barra"></a>
           </li>
-          <li class="nav-item">
+
+          <!-- <li class="nav-item">
             <a class="nav-link"  id="nombreusuario"></a>
-          </li>
-          <li class="nav-item">
+          </li> -->
+          
+          <li class="nav-item"> 
           </li>
         </ul>
       </div>
