--- a/sell.html
+++ b/sell.html
@@ -30,10 +30,7 @@
             <a class="nav-link active" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html" id="cierresesion">Cerrar sesión</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"  id="nombreusuario"></a>
+            <a class="nav-link"  id="barra"></a>
           </li>
           <li class="nav-item">
           </li>
